Added docs directory and fixed MANIFEST.in templates reference

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include LICENSE
 include README.md
 recursive-include docs *
-recursive-include dicom/templates *
+recursive-include django_dicom/templates *
