--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+dicom_parser~=0.1
 Django==2.*
 djangorestframework~=3.10
 django-environ~=0.4
@@ -6,6 +7,5 @@ django-filter~=2.2
 numpy~=1.17
 pandas~=0.25
 psycopg2-binary~=2.8
-pydicom~=1.3
 tqdm~=4.40
 xlrd~=1.2
