--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include LICENSE
 include README.md
+include requirements.txt
+include requirements-dev.txt
 recursive-include docs *
-recursive-include django_dicom/templates *
