--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+dicom_parser==0.1.4
 Django~=3.1
 djangorestframework~=3.12
 django-environ~=0.4
@@ -11,4 +12,3 @@ pydicom~=2.0
 pygments~=2.6
 tqdm~=4.40
 xlrd~=1.2
-git+https://github.com/ZviBaratz/dicom_parser.git@master#egg=dicom_parser
