--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,4 @@ pygments~=2.6
 pynetdicom~=1.5
 tqdm~=4.59
 xlrd~=1.2
-git+https://github.com/open-dicom/dicom_parser.git@master#egg=dicom_parser
+git+https://github.com/open-dicom/dicom_parser.git@main#egg=dicom_parser
